[project]
name = "FontMerger"
version = "0.1.0"
description = "Fallback font merger: preserve primary fonts and fill only missing glyphs from secondary fonts."
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.50",
]

[project.optional-dependencies]
tui = [
    "prompt_toolkit>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
